--- a/run_configs/new_test_config_oes.yaml
+++ b/run_configs/new_test_config_oes.yaml
@@ -17,13 +17,15 @@ MODEL_CONFIG:
   USE_INSTANCE_NORM: false
   BN_TRACK_RUNNING_STATS: true
 
+TRAINER_CONFIG:
+  USE_PARALLEL_FORWARD_PASS: true
+
 OPTIMIZER_CONFIG:
   OPTIMIZER_SLUG: "openai_evolutionary_optimizer"
   LR: 0.001
   POPSIZE: 10
   SIGMA: 0.1
   USE_ANTITHETIC_SAMPLING: true
-  USE_PARALLEL_FORWARD_PASS: true
 
 LR_SCHEDULER_CONFIG:
   LR_SCHEDULER_SLUG: null
