Add loss ranking

--- a/test_run_configs/cpu_oes_subset.yaml
+++ b/test_run_configs/cpu_oes_subset.yaml
@@ -26,6 +26,7 @@ OPTIMIZER_CONFIG:
   POPSIZE: 10
   SIGMA: 0.1
   USE_ANTITHETIC_SAMPLING: true
+  USE_RANK_TRANSFORM: true
 
 LR_SCHEDULER_CONFIG:
   LR_SCHEDULER_SLUG: null
