--- a/test_run_configs/cpu_oes_subset.yaml
+++ b/test_run_configs/cpu_oes_subset.yaml
@@ -3,7 +3,8 @@ GENERAL_CONFIG:
   DEVICE: "cpu"
   DTYPE: float32
   SEED: 0
-  NUM_EPOCHS: 10
+  NUM_TRAIN_STEPS: 50
+  TRAIN_INTERVAL_LENGTH: 10
 
 DATA_CONFIG:
   IS_CIFAR10: false
