Adjust lr scheduler step to num_train_steps duration specification

--- a/test_run_configs/cpu_backprop_subset.yaml
+++ b/test_run_configs/cpu_backprop_subset.yaml
@@ -23,7 +23,9 @@ OPTIMIZER_CONFIG:
   LR: 0.01
 
 LR_SCHEDULER_CONFIG:
-  LR_SCHEDULER_SLUG: null
+  LR_SCHEDULER_SLUG: "cosine_annealing"
+  ETA_MIN: 0
+  T_MAX: 50
 
 EVALUATOR_CONFIG:
   DO_LOG_MODELS: false
