--- a/test_run_configs/cuda_oes_500popsize.yaml
+++ b/test_run_configs/cuda_oes_500popsize.yaml
@@ -2,15 +2,16 @@ GENERAL_CONFIG:
   WANDB_PROJECT: "thesis_baseline_testruns"
   DEVICE: "cuda:0"
   DTYPE: bfloat16
-  SEED: 0
-  NUM_EPOCHS: 2
+  SEED: 1
+  NUM_TRAIN_STEPS: 2000
+  TRAIN_INTERVAL_LENGTH: 1000
 
 DATA_CONFIG:
   IS_CIFAR10: false
   USE_EVERY_NTH: null
   USE_IMG_TRANSFORMS: true
   BATCH_SIZE: 32
-  NUM_WORKERS: 0
+  NUM_WORKERS: 8
 
 MODEL_CONFIG:
   MODEL_SLUG: "small_resnet20"
@@ -26,6 +27,7 @@ OPTIMIZER_CONFIG:
   POPSIZE: 500
   SIGMA: 0.1
   USE_ANTITHETIC_SAMPLING: true
+  USE_RANK_TRANSFORM: true
 
 LR_SCHEDULER_CONFIG:
   LR_SCHEDULER_SLUG: null
