--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.2.5",
     "pyyaml>=6.0.2",
-    "torch>=2.7.0",
-    "torchvision>=0.22.0",
+    "torch==2.6.0",
+    "torchvision>=0.21.0",
     "tqdm>=4.67.1",
     "wandb>=0.19.11",
 ]
