--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch_nigthly" }
-torchvision = { index = "pytorch_nigthly" }
+torch = { index = "pytorch_cu128" }
+torchvision = { index = "pytorch_cu128" }
 
 [[tool.uv.index]]
-name = "pytorch_nigthly"
-url = "https://download.pytorch.org/whl/nightly/cu128"
+name = "pytorch_cu128"
+url = "https://download.pytorch.org/whl/cu128"
