--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,18 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch_cu128" }
-torchvision = { index = "pytorch_cu128" }
+torch = [
+    { index = "pytorch_cu128", marker = "sys_platform == 'linux'" },
+    { index = "pypi", marker = "sys_platform == 'darwin'" },
+]
+torchvision = [
+    { index = "pytorch_cu128", marker = "sys_platform == 'linux'" },
+    { index = "pypi", marker = "sys_platform == 'darwin'" },
+]
+
+[[tool.uv.index]]
+name = "pypi"
+url = "https://pypi.org/simple"
 
 [[tool.uv.index]]
 name = "pytorch_cu128"
