--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy",
     "pyyaml>=6.0.2",
+    "scipy",
     "torch",
     "torchvision>=0.21.0",
     "tqdm",
